--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Prueba</title>
 </head>
 <body>
-    
+    <section>
+        <div class="contenedor__navbar">
+            <div class="logo">   <p>Braijan</p></div>
+            <div class="nav">
+                <nav>
+                    <ul style="list-style: none;">
+                        <li>(Services)</li>
+                        <li>Work</li>
+                        <li> Notes</li>
+                        <li>Experience</li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="contacto">
+                <p>(52) 7444292412 </p>
+            </div>
+        </div>
+        <div class="father"> <br><br><br></div>
+    </section>
 </body>
 </html>
