--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="contenedor__navbar">
-            <div class="logo">   <p>Braijan</p></div>
+            <div class="logo">   <p>Braiyan</p></div>
             <div class="nav">
                 <nav>
                     <ul style="list-style: none;">
