--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <body>
     <section>
         <div class="contenedor__navbar">
-            <div class="logo">   <p>Braiyan</p></div>
+            <div class="logo">   <p style="font-family: 'Hurricane', cursive; font-size: 30px;">Braiyan</p></div>
             <div class="nav">
                 
                     <ul style="list-style: none; ">
-                        <li>(Services)</li>
+                        <li style="color:darkgreen">(Services)</li>
                         <li>Work</li>
                         <li> Notes</li>
                         <li>Experience</li>
                     </ul>
-                
             </div>
 
             <div class="contacto  ">
