--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
             </div>
             
         </div>
-        <div class="father"> <br><br><br></div>
+        <div class="cuerpo__superior"> 
+            <div class="superior__izquierdo">
+                hey hola, soy samuel
+            </div>
+            <div class="superior__centro"></div>
+            <div class="superior__derecho">
+                
+            </div>
+        </div>
     </section>
 </body>
 </html>
